sandbox/output
HikerTest.java:8: error: cannot find symbol
        assertEquals(0, StringCalculator.add(""));
                                        ^
  symbol:   method add(String)
  location: class StringCalculator
1 error
